--- a/Conecta_4/.project
+++ b/Conecta_4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tres_en_Raya</name>
+	<name>Conecta_4</name>
 	<comment></comment>
 	<projects>
 	</projects>
